--- a/src/vista/PanelCuentas.form
+++ b/src/vista/PanelCuentas.form
@@ -161,6 +161,9 @@
                     <Column editable="false" title="Movimientos" type="java.lang.Object"/>
                   </Table>
                 </Property>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Cursor de Mano"/>
+                </Property>
                 <Property name="focusable" type="boolean" value="false"/>
                 <Property name="gridColor" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
@@ -168,10 +171,10 @@
                 <Property name="rowHeight" type="int" value="25"/>
                 <Property name="rowMargin" type="int" value="1"/>
                 <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="be" green="86" red="0" type="rgb"/>
+                  <Color blue="ec" green="f8" red="ff" type="rgb"/>
                 </Property>
                 <Property name="selectionForeground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="ff" green="ff" red="ff" type="rgb"/>
+                  <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
                 <Property name="showGrid" type="boolean" value="false"/>
                 <Property name="showHorizontalLines" type="boolean" value="true"/>
