--- a/src/vista/Paneles/PanelCuentas.form
+++ b/src/vista/Paneles/PanelCuentas.form
@@ -50,14 +50,17 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Roboto" size="24" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Hola"/>
+            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="be" green="86" red="0" type="rgb"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="CUENTAS CORRIENTES"/>
           </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="50" y="0" width="510" height="40"/>
+              <AbsoluteConstraints x="50" y="10" width="510" height="40"/>
             </Constraint>
           </Constraints>
         </Component>
